app/styles/main.css
body {
  background-color: #383838;
  color:  #F7F7F7;
  font-family: 'Raleway', sans-serif;
  }

input {
  color: #383838;
  background-color:  #dedede;
}

button {
  color: #383838;
  background-color:  #F7F7F7;
  border: 1px solid #4b4b4b;
}


span {
  font-size: 1em;
}

a {
  text-decoration: none;
  color: #383838;
  font-size: 2em;

}

.container {
  padding-bottom: 10%;
}

.searchInput {
  margin: 0 auto;
  width: 50%;
}

.searchButton {
  margin: 0 auto;
  max-width: 40%
}

.searchForm {
  width: 100%;
  margin-top: 5%;
  text-align: center;

}

.wrap {
  width: 100%;
  text-align: center;
}

.artist {
  width: 80%;
  height: auto;
  color: #383838;
  background-color:  #dedede;
  display: inline-block;
  margin-bottom: 10%;

}

.artistImage {
  width: 100%;
}

.artistCenter {
  text-align: center;
  padding-bottom: 8%;
}

.artistDescription {
  margin-left: 3%;
  margin-right: 3%;
  margin-bottom: 10%;
}

.artistInfo {
  display: inline;
}

.artistName {
  margin: 0;
  font-size: 1.75em;
  margin-top: 5%;

}

.artistGenre {
  margin: 0;
  margin-bottom: -5%;
  font-size: 1.25em;
  font-style: italic;
  height: 30px;
}

.artistBio {
  font-size: 1.15em;
  text-align: left;
}

.artistTrackName {
  height: 60px;
  margin: 0;
  background-color: #535151;
  color: #dedede;
  padding-top: 5px;
}

.artistTrackImage {
  width: 33.33%;
  display: inline-block;
  margin-right: -2px;
  margin-left: -2px;
  margin-top: -7px;
  margin-bottom: -7px;
  opacity: 0.8;
}

.artistTrackImageWrap {
}

.artistTrackImage:hover {
  cursor: pointer;
  opacity: 1;

}

.artistTrackImage:active {
  opacity: 0.9;
}




audio {
  width: 100%;
}


@media (min-width: 600px) {
  .artist {
    width: 45%;
    margin: 2.5%;
    margin-bottom: 3%;
  }
}

@media (min-width: 900px) {
  .artist {
    width: 29.5%;
    margin: 1.66%;
    margin-bottom: 3%;
  }
}

